--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: postgres:16
     user: root
     environment:
-      - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD=odoo17@2023
-      - POSTGRES_DB=postgres
-    restart: always             # run as a service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    restart: unless-stopped             # run as a service
     volumes:
         - ./postgresql:/var/lib/postgresql/data
 
@@ -17,19 +17,20 @@ services:
     depends_on:
       - db
     ports:
-      - "10017:8069"
-      - "20017:8072" # live chat
+      - "${ODOO_PORT}:8069"
+      - "${ODOO_CHAT_PORT}:8072" # live chat
     tty: true
     command: --
     environment:
       - HOST=db
-      - USER=odoo
-      - PASSWORD=odoo17@2023
+      - USER=${POSTGRES_USER}
+      - PASSWORD=${POSTGRES_PASSWORD}
+      - ODOO_ADMIN_PASSWORD=${ODOO_ADMIN_PASSWORD}
     volumes:
       #- /etc/timezone:/etc/timezone:ro
       #- /etc/localtime:/etc/localtime:ro
-      # - ./entrypoint.sh:/entrypoint.sh   # if you want to install additional Python packages, uncomment this line!
+      - ./entrypoint.sh:/entrypoint.sh   # replaces the original entrypoint, refer to odoo docker image for updates
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
-    restart: always             # run as a service
+    restart: unless-stopped             # run as a service
     
